--- a/index.html
+++ b/index.html
@@ -904,5 +904,16 @@
     document.addEventListener('DOMContentLoaded', initializeEventListeners);
 
 </script>
+  <script>
+    if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+            navigator.serviceWorker.register('/service-worker.js').then(registration => {
+                console.log('ServiceWorker enregistré avec succès:', registration.scope);
+            }, err => {
+                console.log('Échec de l\'enregistrement du ServiceWorker:', err);
+            });
+        });
+    }
+</script>
 </body>
 </html>
